Added Quest Location and Qest Log

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -377,6 +377,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -484,6 +495,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -549,6 +571,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -630,6 +663,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -699,6 +743,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -812,6 +867,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -883,6 +949,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -967,6 +1044,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1083,6 +1171,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog Sewers</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1215,6 +1314,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog East Mountain</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1270,6 +1380,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Shadow Temple</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1343,6 +1464,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Shadow Temple</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1447,6 +1579,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Maraket</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1533,6 +1676,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Samad</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1625,6 +1779,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1690,6 +1855,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1768,6 +1944,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1843,6 +2030,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Maraket</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1915,6 +2113,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Maraket</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1995,6 +2204,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Samad</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -2069,6 +2289,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Samad</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
