Added the new image to the site

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -1561,9 +1561,11 @@
                     <p class="clearfix">
                       <span class="light-blue">OPTION: 2</span>
                       <br>
-                      <img class="npc-img" src="Images/SilvestValley/" alt="Kavic Cove">
-                      <img class="npc-img" src="Images/NPC/Boss/King_Kobold.png" alt="King Kobold"> 
-                      
+                      <img class="npc-img img-map-height" src="Images/SilvestValley/Of_Kobold_Kavic_Cove.png" alt="Kavic Cove">
+                      Leave the cave head south to Fort Eastwatch, from there follow the coast north to reach Kavic Cove. In Kavic Cove you will find a samll building with a ladder this is your entrance to the Silvest Mines.
+                      Head west till you get to a stone structured area with a ladder to go up in to the Kobold Fort. In the fort head west, then south, back to the east, enter the door then north to find the <span class="light-red">King Kobold </span> <img class="monster-img" src="Images/NPC/Boss/King_Kobold.png" alt="King Kobold"> 
+                      Kill him and be updated to return to Galen for your reward.
+                      <br>
                       <span class="green">QUEST UPDATE: King Kobold killed. Return to Galen</span>
                     </p>
                     <p>
@@ -1674,7 +1676,7 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Of Kobolds -->
+              <!-- End of For Those Who Are Brave -->
               <div class="line"></div>
 
 
