Updated Framers Quest.

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -3907,9 +3907,9 @@
                   <p class="clearfix">
                     The <span class="light-red">Farming Trainer</span> says it perfect growing weather for cherries. He can almost taste those freshly baked cherry pies already. He could use some help forageing 10 cherry seeds.
                     <br>
-                    <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 10 foraged cherry seeds.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Successfully plant a seed.</span>
                     <br>
-                    Same task as the last forage untill you receive 10 <span class="light-green">cherry seeds</span> <img src="Images/Valinor/TradeSkills/Cherry_Seed.png" alt="Cherry Seed">    
+                    Head to the farm south of the castle with your shovel and a seed. Click on the grouund and dig a hole.<img class="monster-img" src="Images/Valinor/TradeSkills/Fresh_Soil.png" alt="Fresh Soil"> Click on your seed then on the hole to plant it. If you scuceed with planting it <img class="monster-img" src="Images/Valinor/TradeSkills/Seed_Mound.png" alt="Seed Mound">  
                     Once you have foraged 10 cherry seeds you will be updated.
                     <br>
                       <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> cherry seeds</span> to complete the quest.</span> Return to the <span class="light-red">Farming Trainer</span> to complete your task and start a new one.  
@@ -3945,7 +3945,7 @@
                     <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 1 fresh cinnamon bundle.</span>
                     <br>
                     You can't buy the <span class="light-green">Cinnamon seeds</span>, <img src="Images/Valinor/TradeSkills/Cinnamon_Seed.png" alt="Cinnamon Seed"> you will have to forage some if you didn't get any while you where foraging. Cinnamon gorws in 3 stages. Cinnamon Plant Seedling: <img src="Images/Valinor/TradeSkills/Cinnamon_Plant_Seedling.png" alt="Cinnamon Plant Seedling"> Cinnamon Plant <img src="Images/Valinor/TradeSkills/Cinnamon_Plant.png" alt="Cinnamon Plant"> Cinnamon Plant Blossomed <img src="Images/Valinor/TradeSkills/Cinnamon_Plant_Blossomed.png" alt="Cinnamon Plant Blossomed">
-                    When you the cinnamon is on Cinnamon Plant Bloosmed you can use your scythe to get your <span class="light-green">Cinnamon Bundle</span> <img src="Images/Valinor/TradeSkills/Cinnamon_Bundle.png" alt="Cinnamon Bundle"> Once you have harvested 1 fresh Cinnamon Bundle you will be updated. 
+                    When the cinnamon is on Cinnamon Plant Bloosmed you can use your scythe to get your <span class="light-green">Cinnamon Bundle</span> <img src="Images/Valinor/TradeSkills/Cinnamon_Bundle.png" alt="Cinnamon Bundle"> Once you have harvested 1 fresh Cinnamon Bundle you will be updated. 
                     <br>
                       <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Cinnamon Bundle</span> to complete the quest.</span> Return to the <span class="light-red">Farming Trainer</span> to complete your task and start a new one.  
                   </p>
